update the default cell widths as fixed numbers rather than percentages because the header entries are misaligned when there is no scrollbar in the header

--- a/applications/bedrock-site/src/main/webapp/test/database/index.css
+++ b/applications/bedrock-site/src/main/webapp/test/database/index.css
@@ -25,7 +25,7 @@ div[id="bedrock-header-line"] {
 
 .bedrock-header-entry {
     display: inline-block;
-    width: 10%;
+    width: 80px;
     text-align: center;
 }
 
@@ -60,7 +60,7 @@ div[id="bedrock-database-display-list"] {
 .bedrock-database-entry {
     display: inline-block;
     height: 100%;
-    width: 10%;
+    width: 80px;
     text-align: center;
 }
 
